tests/fail/ownership/borrow-1-1.rs
let mut x: mut String = "hello";
let y: &mut String = &x;
let z: &mut String = &mut x; 
